@@ -1,3 +1,7 @@
+2020-05-14  Rolf Ade  <rolf@pointsman.de>
+
+        Added method clearString to the dom command.
+
 2019-12-31  Rolf Ade  <rolf@pointsman.de>
 
         Updated to expat 2.2.9.
